Part-1: correction-3: the file css/style has been corrected problem-3: 'En savoir plus button was overlapping with restaurant description on screens of size 641px - 768px correction-3: the two media queries: (max-width: 640px) and (max-width: 768px) have been updated The css style for .resto was removed from the media query (max-width: 640px). The css style for .resto block was changed to 	.resto {         padding-bottom: 50px; /*correction-1, correction-3*/ 	}

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ h2 {
 	width: 98%;
 	}
 	.resto {
-		min-height: 250px;
+        padding-bottom: 50px; /*correction-1, correction-3*/
 	}
 	h2 {
 		margin: 0 0 1em;
@@ -140,10 +140,7 @@ h2 {
 		text-align: left;
 		margin: 0.5em 0;
 	}
-    /*correction-1*/
-	.resto {
-		padding-bottom: 50px;
-	}
+
 	h2 {
 		margin:0 0 0.5em;
 	}
